--- a/Installer/Bundle.wxs
+++ b/Installer/Bundle.wxs
@@ -1,14 +1,11 @@
 ﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:bal="http://wixtoolset.org/schemas/v4/wxs/bal">
-  <Bundle Id="TODO_Manufacturer.Installer" Name="Installer" Manufacturer="TODO Manufacturer" Version="1.0.0.0">
+  <Bundle Id="TODO_Manufacturer.Installer" Name="TopVpnInstaller" Manufacturer="TopVpnServers" Version="1.0.0.0">
     <BootstrapperApplication>
       <bal:WixStandardBootstrapperApplication LicenseUrl="https://www.example.com/license" Theme="hyperlinkLicense" />
     </BootstrapperApplication>
-    <Chain>
-      <MsiPackage SourceFile="C:\Users\alexk\Downloads\Programs\OpenVPN-2.6.14-I001-amd64.msi" />
-      <MsiPackage SourceFile="..\SurfVpnClientTest1\bin\$(var.Configuration)\$(var.Platform)\SurfVpnClientTest1.msi">
-        <MsiProperty Name="INSTALLFOLDER" Value="[INSTALLFOLDER]" />
-      </MsiPackage>
-      <!-- ...existing code... -->
-    </Chain>
+	  <Chain>
+		  <MsiPackage SourceFile="C:\Users\alexk\Downloads\Programs\OpenVPN-2.6.14-I001-amd64.msi" />
+		  <MsiPackage SourceFile="..\TopVpnInstaller\bin\$(var.Platform)\$(var.Configuration)\en-US\TopVpnInstaller.msi" />
+	  </Chain>
   </Bundle>
 </Wix>
