Disconnect from openvpn using interface

--- a/SurfVpnClientTest1/MainWindow.xaml
+++ b/SurfVpnClientTest1/MainWindow.xaml
@@ -69,7 +69,7 @@
         </ComboBox>
 
         <!-- Connect Button -->
-        <Button Grid.Row="4" Grid.ColumnSpan="2" Content="Connect" 
+        <Button Grid.Row="4" Grid.ColumnSpan="2" Content="{Binding ConnectButtonText, Mode=OneWay}" 
             FontSize="16"             
             Background="#007ACC" 
             Foreground="White" 
