--- a/SurfVpnClientTest1/MainWindow.xaml
+++ b/SurfVpnClientTest1/MainWindow.xaml
@@ -19,12 +19,13 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="80*"></ColumnDefinition>
-            <ColumnDefinition Width="20*"></ColumnDefinition>
+            <ColumnDefinition Width="70*"></ColumnDefinition>
+            <ColumnDefinition Width="10*"></ColumnDefinition>
+            <ColumnDefinition Width="10*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <!-- Header -->
-        <Border Grid.Row="0" Grid.ColumnSpan="2" Background="#007ACC" CornerRadius="10" Margin="0,0,0,10">
+        <Border Grid.Row="0" Grid.ColumnSpan="3" Background="#007ACC" CornerRadius="10" Margin="0,0,0,10">
             <Label Content="Top Vpn Servers" 
                VerticalAlignment="Center" 
                HorizontalAlignment="Center" 
@@ -42,11 +43,11 @@
             <Label Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="16" Margin="0,5,0,5">
                 Subscription:
             </Label>
-            <TextBox Grid.Column="1" x:Name="SubscriptionText" Text="{Binding SubscriptionText,Mode=OneWay}" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="16" Margin="0,5,0,5"/>
+            <TextBox Grid.Column="1" x:Name="SubscriptionText" Text="FREE" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="16" IsReadOnly="True" Margin="0,5,0,5"/>
         </Grid>
 
         <!-- Profile Button -->        
-        <Button Grid.Row="1" Grid.Column="1" Content="Save"         
+        <Button Grid.Row="1" Grid.Column="2" Content="Save"         
          
             Foreground="#007ACC" 
             BorderBrush="Transparent" 
@@ -58,7 +59,7 @@
         <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="16" Margin="0,5,0,5">
             select a server:
         </Label>
-        <ComboBox Grid.Row="3" Grid.ColumnSpan="2" Name="ServersDropDown"
+        <ComboBox Grid.Row="3" Grid.ColumnSpan="1" Name="ServersDropDown"
                   VerticalAlignment="Center"
                   HorizontalAlignment="Stretch"
                   FontSize="16"
@@ -68,8 +69,22 @@
                   DisplayMemberPath="Name">
         </ComboBox>
 
+        <Button Grid.Row="3" Grid.Column="1" Content="Add"                                        
+            FontWeight="Bold"             
+            VerticalAlignment="Center" 
+            HorizontalAlignment="Center"
+            Command="{Binding ImportProfileCommand}"
+                />
+
+        <Button Grid.Row="3" Grid.Column="2" Content="Del"                                        
+            FontWeight="Bold"             
+            VerticalAlignment="Center" 
+            HorizontalAlignment="Center"
+            Command="{Binding DeleteProfileCommand}"
+                />
+
         <!-- Connect Button -->
-        <Button Grid.Row="4" Grid.ColumnSpan="2" Content="{Binding ConnectButtonText, Mode=OneWay}" 
+        <Button Grid.Row="4" Grid.ColumnSpan="3" Content="{Binding ConnectButtonText, Mode=OneWay}" 
             FontSize="16"             
             Background="#007ACC" 
             Foreground="White" 
@@ -81,22 +96,10 @@
 
 
         <!-- Statistics Panel -->
-        <Border Grid.Row="5" Grid.ColumnSpan="2"  BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="10"
+        <Border Grid.Row="5" Grid.ColumnSpan="3"  BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="10"
                 HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0,0">
             <StackPanel>
                 <TextBlock Text="Statistics" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
-                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBlock Text="Connected Server:" FontWeight="SemiBold" Width="120"/>
-                    <TextBlock x:Name="ConnectedServerText" Text="N/A"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBlock Text="Data Usage:" FontWeight="SemiBold" Width="120"/>
-                    <TextBlock x:Name="DataUsageText" Text="0 MB"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBlock Text="Connection Time:" FontWeight="SemiBold" Width="120"/>
-                    <TextBlock x:Name="ConnectionTimeText" Text="00:00:00"/>
-                </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                     <TextBlock Text="Connection Status:" FontWeight="SemiBold" Width="120"/>
                     <TextBlock x:Name="ConnectionStatus" Text="{Binding ConnectionStatus,Mode=OneWay}"/>
@@ -106,10 +109,10 @@
                     <TextBlock x:Name="AccountEndDate" Text="12/12/2025 00:00:00"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBlock Text="Logs" FontWeight="SemiBold" Width="120"/>
+                    <TextBlock Text="Activity" FontWeight="SemiBold" Width="120"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBlock x:Name="LogsTextBlock" Text="{Binding LogsTextBlock,Mode=OneWay}" TextWrapping="NoWrap"/>
+                <StackPanel Orientation="Horizontal" Margin="0,5,0,0" HorizontalAlignment="Stretch" Height="103">
+                    <TextBlock x:Name="LogsTextBlock" Text="{Binding LogsTextBlock,Mode=OneWay}" TextWrapping="Wrap"  HorizontalAlignment="Stretch"/>
                 </StackPanel>
             </StackPanel>
         </Border>
