--- a/SurfVpnClientTest1/MainWindow.xaml
+++ b/SurfVpnClientTest1/MainWindow.xaml
@@ -45,7 +45,7 @@
 
             <!-- Subscription Section -->
             <StackPanel Grid.Row="1" Margin="24,0,24,0" VerticalAlignment="Top">
-                <TextBlock Text="SUBSCRIPTION:" Foreground="#B0B0B0" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,5"/>
+                <TextBlock Text="SUBSCRIPTION NO:" Foreground="#B0B0B0" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,5"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -93,32 +93,10 @@
                           FontSize="16"
                           Padding="10,2"
                           Height="36"
-                          MinWidth="120"
+                          MinWidth="225"
                           Margin="0,0,8,0"
                           VerticalContentAlignment="Center"
                           HorizontalContentAlignment="Left"/>
-                <Button Content="Add"
-                        Command="{Binding ImportProfileCommand}"
-                        Background="#393A40"
-                        Foreground="White"
-                        BorderBrush="#393A40"
-                        BorderThickness="1"
-                        FontWeight="SemiBold"
-                        Padding="12,0"
-                        Height="36"
-                        Margin="0,0,8,0"
-                        Cursor="Hand"/>
-                <Button Content="Del"
-                        Command="{Binding DeleteProfileCommand}"
-                        Background="#393A40"
-                        Foreground="White"
-                        BorderBrush="#393A40"
-                        BorderThickness="1"
-                        FontWeight="SemiBold"
-                        Padding="12,0"
-                        Height="36"
-                        Margin="0,0,8,0"
-                        Cursor="Hand"/>
                 <Button Content="Refresh"
                         Command="{Binding ReloadProfilesCommand}"
                         Background="#393A40"
