--- a/SurfVpnClientTest1/MainWindow.xaml
+++ b/SurfVpnClientTest1/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:vm="clr-namespace:SurfVpnClientTest1.ViewModels"
         mc:Ignorable="d"
         Title="Top Vpn Servers" MaxHeight="500" MaxWidth="350" MinHeight="500" MinWidth="350"
-        Background="#23242A" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True">
+        Background="#23242A" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True"
+        MouseLeftButtonDown="Window_MouseLeftButtonDown">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
