--- a/SurfVpnClientTest1/MainWindow.xaml
+++ b/SurfVpnClientTest1/MainWindow.xaml
@@ -59,12 +59,12 @@
                              BorderThickness="1"
                              FontSize="16"
                              Padding="10,4"
-                             Margin="0,0,8,0"
+                             Margin="0,0,16,0"
                              Height="36"
                              VerticalContentAlignment="Center"
                              HorizontalContentAlignment="Left"
                              Style="{x:Null}"/>
-                    <Button Grid.Column="1"
+                    <Button
                             Content="Save"
                             Command="{Binding UpdateSubscriptionCommand}"
                             Background="#393A40"
@@ -74,7 +74,7 @@
                             FontWeight="SemiBold"
                             Padding="16,0"
                             Height="36"
-                            Margin="0,0,0,0"
+                            Margin="226,0,0,0"
                             Cursor="Hand"/>
                 </Grid>
             </StackPanel>
@@ -93,7 +93,7 @@
                           Padding="10,2"
                           Height="36"
                           MinWidth="225"
-                          Margin="0,0,8,0"
+                          Margin="0,0,0,0"
                           VerticalContentAlignment="Center"
                           HorizontalContentAlignment="Left"/>
                 <Button Content="Refresh"
@@ -105,7 +105,7 @@
                         FontWeight="SemiBold"
                         Padding="12,0"
                         Height="36"
-                        Cursor="Hand"/>
+                        Cursor="Hand" Width="75"/>
             </StackPanel>
 
             <!-- Connect Button -->
